--- a/src/3.x/drivers/video/Makefile
+++ b/src/3.x/drivers/video/Makefile
@@ -154,7 +154,7 @@ obj-$(CONFIG_FB_SYS_IMAGEBLIT) += sysimgblt.o
 # Platform or fallback drivers go here
 #obj-$(CONFIG_FB_UVESA)            += uvesafb.o
 obj-$(CONFIG_FB_VESA)             += vesafb.o
-obj-$(CONFIG_FB_EFI)              += efifb.o
+#obj-$(CONFIG_FB_EFI)              += efifb.o #Has dependency cycle! bug remark 2023.03.19
 obj-$(CONFIG_FB_VGA16)            += vga16fb.o
 #obj-$(CONFIG_FB_OF)               += offb.o
 #obj-$(CONFIG_FB_BF537_LQ035)      += bf537-lq035.o
