--- a/src/4.x/drivers/net/ethernet/Makefile
+++ b/src/4.x/drivers/net/ethernet/Makefile
@@ -79,7 +79,7 @@ obj-$(CONFIG_NET_VENDOR_REALTEK) += realtek/
 #obj-$(CONFIG_NET_VENDOR_STMICRO) += stmicro/
 #obj-$(CONFIG_NET_VENDOR_SUN) += sun/
 #obj-$(CONFIG_NET_VENDOR_SYNOPSYS) += synopsys/
-#obj-$(CONFIG_NET_VENDOR_TEHUTI) += tehuti/
+obj-$(CONFIG_NET_VENDOR_TEHUTI) += tehuti/
 #obj-$(CONFIG_NET_VENDOR_TI) += ti/
 #obj-$(CONFIG_TILE_NET) += tile/
 #obj-$(CONFIG_NET_VENDOR_TOSHIBA) += toshiba/
