--- a/src/4.x/drivers/ata/Makefile
+++ b/src/4.x/drivers/ata/Makefile
@@ -122,7 +122,7 @@ obj-m		+= sata_sil.o
 #obj-$(CONFIG_PATA_LEGACY)	+= pata_legacy.o
 
 #libata-y	:= libata-core.o libata-scsi.o libata-eh.o \
-	libata-transport.o libata-trace.o
+#	libata-transport.o libata-trace.o
 #libata-$(CONFIG_SATA_HOST)	+= libata-sata.o
 #libata-$(CONFIG_ATA_SFF)	+= libata-sff.o
 #libata-$(CONFIG_SATA_PMP)	+= libata-pmp.o
