--- a/src/4.x/drivers/ata/Makefile
+++ b/src/4.x/drivers/ata/Makefile
@@ -1,6 +1,6 @@
 # SPDX-License-Identifier: GPL-2.0
 
-obj-$(CONFIG_ATA)		+= libata.o
+#obj-$(CONFIG_ATA)		+= libata.o
 
 # non-SFF interface
 #obj-$(CONFIG_SATA_AHCI)		+= ahci.o libahci.o
@@ -122,9 +122,9 @@ obj-m		+= sata_sil.o
 #obj-$(CONFIG_PATA_LEGACY)	+= pata_legacy.o
 
 
-libata-y	:= libata-core.o libata-scsi.o libata-eh.o \
-	libata-transport.o libata-trace.o
-libata-y	+= libata-sata.o
+#libata-y	:= libata-core.o libata-scsi.o libata-eh.o \
+#	libata-transport.o libata-trace.o
+#libata-y	+= libata-sata.o
 #libata-y	+= libata-sff.o
 #libata-y	+= libata-pmp.o
 #libata-y	+= libata-acpi.o
