--- a/src/4.x/drivers/scsi/Makefile
+++ b/src/4.x/drivers/scsi/Makefile
@@ -69,8 +69,8 @@ obj-m	+= arcmsr/
 #obj-$(CONFIG_SCSI_AHA1740)	+= aha1740.o
 #obj-$(CONFIG_SCSI_AIC7XXX)	+= aic7xxx/
 #obj-$(CONFIG_SCSI_AIC79XX)	+= aic7xxx/
-#obj-$(CONFIG_SCSI_AACRAID)	+= aacraid/
-#obj-$(CONFIG_SCSI_AIC94XX)	+= aic94xx/
+obj-m	+= aacraid/
+obj-m	+= aic94xx/
 #obj-$(CONFIG_SCSI_PM8001)	+= pm8001/
 #obj-$(CONFIG_SCSI_ISCI)		+= isci/
 #obj-$(CONFIG_SCSI_IPS)		+= ips.o
