--- a/src/4.x/drivers/net/ethernet/Makefile
+++ b/src/4.x/drivers/net/ethernet/Makefile
@@ -15,6 +15,7 @@
 #obj-$(CONFIG_NET_VENDOR_APPLE) += apple/
 #obj-$(CONFIG_NET_VENDOR_ARC) += arc/
 obj-$(CONFIG_NET_VENDOR_AQUANTIA) += aquantia/
+obj-m += asix/
 obj-$(CONFIG_NET_VENDOR_ATHEROS) += atheros/
 #obj-$(CONFIG_NET_VENDOR_AURORA) += aurora/
 #obj-$(CONFIG_NET_CADENCE) += cadence/
