--- a/src/4.x/drivers/net/ethernet/atheros/Makefile
+++ b/src/4.x/drivers/net/ethernet/atheros/Makefile
@@ -2,8 +2,8 @@
 # Makefile for the Atheros network device drivers.
 #
 
-#obj-$(CONFIG_ATL1) += atlx/
-#obj-$(CONFIG_ATL2) += atlx/
+obj-m += atl1/
+obj-m += atl2/
 obj-$(CONFIG_ATL1E) += atl1e/
 obj-$(CONFIG_ATL1C) += atl1c/
 obj-$(CONFIG_ALX) += alx/
