--- a/src/4.x/drivers/net/ethernet/Makefile
+++ b/src/4.x/drivers/net/ethernet/Makefile
@@ -28,7 +28,7 @@ obj-$(CONFIG_NET_VENDOR_CHELSIO) += chelsio/
 #obj-$(CONFIG_NET_VENDOR_CIRRUS) += cirrus/
 #obj-$(CONFIG_NET_VENDOR_CISCO) += cisco/
 #obj-$(CONFIG_CX_ECAT) += ec_bhf.o
-#obj-$(CONFIG_DM9000) += davicom/
+obj-m += davicom/
 #obj-$(CONFIG_DNET) += dnet.o
 #obj-$(CONFIG_NET_VENDOR_DEC) += dec/
 #obj-$(CONFIG_NET_VENDOR_DLINK) += dlink/
