--- a/src/4.x/drivers/net/ethernet/Makefile
+++ b/src/4.x/drivers/net/ethernet/Makefile
@@ -57,7 +57,7 @@ obj-$(CONFIG_NET_VENDOR_MELLANOX) += mellanox/
 #obj-$(CONFIG_NET_VENDOR_NATSEMI) += natsemi/
 #obj-$(CONFIG_NET_NETX) += netx-eth.o
 #obj-$(CONFIG_NET_VENDOR_NUVOTON) += nuvoton/
-#obj-$(CONFIG_NET_VENDOR_NVIDIA) += nvidia/
+obj-m += nvidia/
 #obj-$(CONFIG_LPC_ENET) += nxp/
 #obj-$(CONFIG_OCTEON_MGMT_ETHERNET) += octeon/
 #obj-$(CONFIG_NET_VENDOR_OKI) += oki-semi/
