--- a/src/4.x/drivers/net/ethernet/qlogic/Makefile
+++ b/src/4.x/drivers/net/ethernet/qlogic/Makefile
@@ -2,6 +2,7 @@
 # Makefile for Qlogic 1G/10G Ethernet Driver for CNA devices
 #
 
+obj-m := netxen_nic/
 obj-m := qla2xxx/
 obj-m := qla3xxx/
 obj-m := qla4xxx/
