--- a/src/4.x/drivers/net/ethernet/realtek/Makefile
+++ b/src/4.x/drivers/net/ethernet/realtek/Makefile
@@ -7,7 +7,7 @@ obj-$(CONFIG_8139CP) += 8139cp.o
 #obj-$(CONFIG_ATP) += atp.o
 obj-m += r8101/
 obj-$(CONFIG_R8125) += r8125/
-obj-m += r8152/
+#obj-m += r8152/ #--> USb
 obj-$(CONFIG_R8168) += r8168/
 obj-$(CONFIG_R8169) += r8169.o
 obj-m += rtl8150/
