--- a/src/4.x/drivers/net/ethernet/Makefile
+++ b/src/4.x/drivers/net/ethernet/Makefile
@@ -74,7 +74,7 @@ obj-$(CONFIG_NET_VENDOR_REALTEK) += realtek/
 #obj-$(CONFIG_NET_VENDOR_SEEQ) += seeq/
 #obj-$(CONFIG_NET_VENDOR_SILAN) += silan/
 #obj-$(CONFIG_NET_VENDOR_SIS) += sis/
-#obj-$(CONFIG_SFC) += sfc/
+obj-m += sfc/
 #obj-$(CONFIG_NET_VENDOR_SGI) += sgi/
 #obj-$(CONFIG_NET_VENDOR_SMSC) += smsc/
 #obj-$(CONFIG_NET_VENDOR_STMICRO) += stmicro/
