--- a/src/4.x/drivers/net/ethernet/Makefile
+++ b/src/4.x/drivers/net/ethernet/Makefile
@@ -34,7 +34,7 @@ obj-m += davicom/
 #obj-$(CONFIG_NET_VENDOR_DLINK) += dlink/
 obj-$(CONFIG_NET_VENDOR_EMULEX) += emulex/
 #obj-$(CONFIG_NET_VENDOR_EZCHIP) += ezchip/
-#obj-$(CONFIG_NET_VENDOR_EXAR) += neterion/
+obj-m += neterion/
 #obj-$(CONFIG_NET_VENDOR_FARADAY) += faraday/
 #obj-$(CONFIG_NET_VENDOR_FREESCALE) += freescale/
 #obj-$(CONFIG_NET_VENDOR_FUJITSU) += fujitsu/
