--- a/src/4.x/drivers/scsi/Makefile
+++ b/src/4.x/drivers/scsi/Makefile
@@ -131,7 +131,7 @@ obj-m	+= 3w-sas.o
 #obj-$(CONFIG_SCSI_IBMVFC)	+= ibmvscsi/
 #obj-$(CONFIG_SCSI_HPTIOP)	+= hptiop.o
 #obj-$(CONFIG_SCSI_STEX)		+= stex.o
-#obj-$(CONFIG_SCSI_MVSAS)	+= mvsas/
+obj-m	+= mvsas/
 #obj-$(CONFIG_SCSI_MVUMI)	+= mvumi.o
 #obj-$(CONFIG_PS3_ROM)		+= ps3rom.o
 #obj-$(CONFIG_SCSI_CXGB3_ISCSI)	+= libiscsi.o libiscsi_tcp.o cxgbi/
