--- a/src/4.x/drivers/virtio/Makefile
+++ b/src/4.x/drivers/virtio/Makefile
@@ -1,7 +1,10 @@
-obj-$(CONFIG_VIRTIO) += virtio.o virtio_ring.o
-obj-$(CONFIG_VIRTIO_MMIO) += virtio_mmio.o
-obj-$(CONFIG_VIRTIO_PCI) += virtio_pci.o
-virtio_pci-y := virtio_pci_modern.o virtio_pci_common.o
-virtio_pci-$(CONFIG_VIRTIO_PCI_LEGACY) += virtio_pci_legacy.o
-obj-$(CONFIG_VIRTIO_BALLOON) += virtio_balloon.o
-obj-$(CONFIG_VIRTIO_INPUT) += virtio_input.o
+obj-m           += virtio.o virtio_ring.o
+obj-m           += virtio_mmio.o
+obj-m           += virtio_pci.o
+virtio_pci-y    := virtio_pci_modern.o virtio_pci_common.o
+virtio_pci-m    += virtio_pci_legacy.o
+obj-m           += virtio_net.o
+obj-m           += virtio_scsi.o
+obj-m           += virtio_blk.o
+obj-m += virtio_balloon.o
+obj-m += virtio_input.o
