--- a/src/4.x/drivers/net/ethernet/Makefile
+++ b/src/4.x/drivers/net/ethernet/Makefile
@@ -89,4 +89,4 @@ obj-m += via/
 #obj-$(CONFIG_NET_VENDOR_WIZNET) += wiznet/
 #obj-$(CONFIG_NET_VENDOR_XILINX) += xilinx/
 #obj-$(CONFIG_NET_VENDOR_XIRCOM) += xircom/
-obj-m += vxian/
+#obj-m += vxian/
