--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,17 @@ jobs:
           done
           (cd firmware && tar caf ../firmware.tgz *)
 
+      - name: Copy to main branch
+        run: |
+          mkdir -p ./copy-to-main
+          cp ./*.tgz ./copy-to-main/
+          cd ./copy-to-main
+          git config --global user.name "PeterSuh-Q3"
+          git config --global user.email dante9000@gmail.com
+          git add -A
+          git commit -m "Add release artifacts"
+          git push origin main
+
       # Publish a release if is a tag
       - name: Release
         uses: softprops/action-gh-release@v1
