--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
           git config --global user.email dante9000@gmail.com
           git add -A
           git commit -m "Add release artifacts"
-          git push origin main
+          git push
 
       # Publish a release if is a tag
       - name: Release
