--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,9 +29,12 @@ jobs:
           cd ./copy-to-main
           git config --global user.name "PeterSuh-Q3"
           git config --global user.email dante9000@gmail.com
+          git init
           git add -A
           git commit -m "Add release artifacts"
-          git push
+          git branch -M main
+          git remote add origin https://github.com/PeterSuh-Q3/arpl-modules.git
+          git push -u origin main
 
       # Publish a release if is a tag
       - name: Release
