--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,18 +14,20 @@ jobs:
 
       - name: Tar modules
         run: |
+          git clone https://github.com/pocopico/redpill-modules.git
           ls -d *-*/ | grep -v "copy-to-main/"
           for D in `ls -d *-*/ | grep -v "copy-to-main/"`; do
             E=$(echo ${D} | sed 's#/##')
-            echo "${E}"
+            echo "merge pocopico's ${E}"
+            cp -vf ./redpill-modules/${E}/*.ko ./${E}/
             (cd ${E} && tar caf ../${E}.tgz *.ko)
           done
           (cd firmware && tar caf ../firmware.tgz *)
 
       # Publish a release if is a tag
-      - name: Release
-        uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags/')
-        with:
-          files: |
-            *.tgz
+#      - name: Release
+#        uses: softprops/action-gh-release@v1
+#        if: startsWith(github.ref, 'refs/tags/')
+#        with:
+#          files: |
+#            *.tgz
