--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,8 +21,10 @@ jobs:
             echo "merge pocopico's ${E}"
             cp -vf ./redpill-modules/${E}/*.ko ./${E}/
             (cd ${E} && tar caf ../${E}.tgz *.ko)
+            sha256sum ../${E}.tgz | awk '{print $1}' | awk '{print $1 " '${E}.tgz' modpack.sha256"}' >> files-chksum
           done
           (cd firmware && tar caf ../firmware.tgz *)
+          sha256sum ../firmware.tgz | awk '{print $1}' | awk '{print $1 " 'firmware.tgz' firmware.sha256"}' >> files-chksum
 
       # Publish a release if is a tag
 #      - name: Release
@@ -30,4 +32,4 @@ jobs:
 #        if: startsWith(github.ref, 'refs/tags/')
 #        with:
 #          files: |
-#            *.tgz
+#            *.tgz, files-chksum
