--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,12 +15,17 @@ jobs:
       - name: Tar modules
         run: |
           git clone https://github.com/pocopico/redpill-modules.git
+          git clone https://github.com/wjz304/arpl-modules.git
           ls -d *-*/ | grep -v "copy-to-main/"
           for D in `ls -d *-*/ | grep -v -e "copy-to-main/" -e "redpill-modules/"`; do
             E=$(echo ${D} | sed 's#/##')
-            echo "merge pocopico's ${E}"
-            cp -vf ./redpill-modules/${E}/*.ko ./${E}/
-            [ ${E} == "epyc7002-5.10.55" ] && rm -f ./${E}/usb*.ko && rm -f ./${E}/xhci*.ko
+            if [ ${E} == "epyc7002-5.10.55" ]; then
+              echo "merge wjz304's ${E}"            
+              cp -vf ./arpl-modules/official/${E}/*.ko ./${E}/            
+            else
+              echo "merge pocopico's ${E}"            
+              cp -vf ./redpill-modules/${E}/*.ko ./${E}/
+            fi
             (cd ${E} && tar caf ../${E}.tgz *.ko)
             sha256sum ./${E}.tgz | awk '{print $1}' | awk '{print $1 " '${E}.tgz' modpack.sha256"}' >> files-chksum
           done
