--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,6 +29,11 @@ jobs:
               cp -vf ./redpill-modules/${E}/*.ko ./${E}/
               #rm -f ./${E}/mlx4_core.ko
               rm -f ./${E}/mlx4_en.ko
+            elif [ ${E} == "broadwell-4.4.302" ]; then
+              echo "merge pocopico's ${E}"
+              cp -vf ./redpill-modules/${E}/*.ko ./${E}/
+              #rm -f ./${E}/mlx4_core.ko
+              rm -f ./${E}/mlx4_en.ko
             else 
               echo "merge pocopico's ${E}"
               cp -vf ./redpill-modules/${E}/*.ko ./${E}/
