--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,17 +25,17 @@ jobs:
               cp -vf ./arpl-modules/official/${E}/*.ko ./${E}/
             elif [ ${E} == "broadwellnk-4.4.302" ]; then
               echo "merge wjz304's ${E}"
-              cp -vf ./arpl-modules/${E}/*.ko ./${E}/
+              cp -vf ./arpl-modules/official/${E}/*.ko ./${E}/
               rm -f ./${E}/mlx4_core.ko
               rm -f ./${E}/mlx4_en.ko
             elif [ ${E} == "broadwell-4.4.302" ]; then
               echo "merge wjz304's ${E}"
-              cp -vf ./arpl-modules/${E}/*.ko ./${E}/
+              cp -vf ./arpl-modules/official/${E}/*.ko ./${E}/
               rm -f ./${E}/mlx4_core.ko
               rm -f ./${E}/mlx4_en.ko
             else 
               echo "merge wjz304's ${E}"
-              cp -vf ./arpl-modules/${E}/*.ko ./${E}/
+              cp -vf ./arpl-modules/official/${E}/*.ko ./${E}/
             fi
             (cd ${E} && tar caf ../${E}.tgz *.ko)
             sha256sum ./${E}.tgz | awk '{print $1}' | awk '{print $1 " '${E}.tgz' modpack.sha256"}' >> files-chksum
