--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,27 +15,35 @@ jobs:
       - name: Tar modules
         run: |
           git clone https://github.com/wjz304/arpl-modules.git
-          ls -d *-*/ | grep -v -e "copy-to-main/" -e "arpl-modules/"
-          for D in `ls -d *-*/ | grep -v -e "copy-to-main/" -e "arpl-modules/"`; do
+          ls -d *-*/ | grep -v -e "arpl-modules/"
+          for D in `ls -d *-*/ | grep -v -e "arpl-modules/"`; do
             E=$(echo ${D} | sed 's#/##')
             if [ ${E} == "epyc7002-5.10.55" ]; then
               mkdir -p /tmp/${E}
               mv -f ./${E}/*.ko /tmp/${E}/
-              echo "merge wjz304's ${E}"            
+              echo "merge wjz304's official ${E}"
               cp -vf ./arpl-modules/official/${E}/*.ko ./${E}/
+              echo "merge wjz304's thirdparty ${E}"              
+              cp -vf ./arpl-modules/thirdparty/${E}/*.ko ./${E}/
             elif [ ${E} == "broadwellnk-4.4.302" ]; then
-              echo "merge wjz304's ${E}"
+              echo "merge wjz304's official ${E}"
               cp -vf ./arpl-modules/official/${E}/*.ko ./${E}/
-              rm -f ./${E}/mlx4_core.ko
-              rm -f ./${E}/mlx4_en.ko
+              echo "merge wjz304's thirdparty ${E}"              
+              cp -vf ./arpl-modules/thirdparty/${E}/*.ko ./${E}/
+              echo "copy ${E} vanilla module"
+              cp -vf ./vanilla/${E}/*.ko ./${E}/
             elif [ ${E} == "broadwell-4.4.302" ]; then
-              echo "merge wjz304's ${E}"
+              echo "merge wjz304's official ${E}"
               cp -vf ./arpl-modules/official/${E}/*.ko ./${E}/
-              rm -f ./${E}/mlx4_core.ko
-              rm -f ./${E}/mlx4_en.ko
+              echo "merge wjz304's thirdparty ${E}"              
+              cp -vf ./arpl-modules/thirdparty/${E}/*.ko ./${E}/
+              echo "copy ${E} vanilla module"              
+              cp -vf ./vanilla/${E}/*.ko ./${E}/
             else 
-              echo "merge wjz304's ${E}"
+              echo "merge wjz304's official ${E}"
               cp -vf ./arpl-modules/official/${E}/*.ko ./${E}/
+              echo "merge wjz304's thirdparty ${E}"              
+              cp -vf ./arpl-modules/thirdparty/${E}/*.ko ./${E}/
             fi
             (cd ${E} && tar caf ../${E}.tgz *.ko)
             sha256sum ./${E}.tgz | awk '{print $1}' | awk '{print $1 " '${E}.tgz' modpack.sha256"}' >> files-chksum
