--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,26 +24,14 @@ jobs:
               echo "merge wjz304's official ${E}"
               cp -vf ./arpl-modules/official/${E}/*.ko ./${E}/
               echo "merge wjz304's thirdparty ${E}"              
-              cp -vf ./arpl-modules/thirdparty/${E}/*.ko ./${E}/
-            elif [ ${E} == "broadwellnk-4.4.302" ]; then
-              echo "merge wjz304's official ${E}"
-              cp -vf ./arpl-modules/official/${E}/*.ko ./${E}/
-              echo "merge wjz304's thirdparty ${E}"              
-              cp -vf ./arpl-modules/thirdparty/${E}/*.ko ./${E}/
-              echo "copy ${E} vanilla module"
-              cp -vf ./vanilla/${E}/*.ko ./${E}/
-            elif [ ${E} == "broadwell-4.4.302" ]; then
-              echo "merge wjz304's official ${E}"
-              cp -vf ./arpl-modules/official/${E}/*.ko ./${E}/
-              echo "merge wjz304's thirdparty ${E}"              
-              cp -vf ./arpl-modules/thirdparty/${E}/*.ko ./${E}/
-              echo "copy ${E} vanilla module"              
-              cp -vf ./vanilla/${E}/*.ko ./${E}/
+              [ -f ./arpl-modules/thirdparty/${E} ] && cp -vf ./arpl-modules/thirdparty/${E}/*.ko ./${E}/
             else 
               echo "merge wjz304's official ${E}"
               cp -vf ./arpl-modules/official/${E}/*.ko ./${E}/
               echo "merge wjz304's thirdparty ${E}"              
-              cp -vf ./arpl-modules/thirdparty/${E}/*.ko ./${E}/
+              [ -f ./arpl-modules/thirdparty/${E} ] && cp -vf ./arpl-modules/thirdparty/${E}/*.ko ./${E}/
+              echo "copy ${E} vanilla module"              
+              [ -f ./vanilla/${E} ] && cp -vf ./vanilla/${E}/*.ko ./${E}/
             fi
             (cd ${E} && tar caf ../${E}.tgz *.ko)
             sha256sum ./${E}.tgz | awk '{print $1}' | awk '{print $1 " '${E}.tgz' modpack.sha256"}' >> files-chksum
