--- a/.github/workflows/single.yml
+++ b/.github/workflows/single.yml
@@ -1,9 +1,6 @@
 name: Tar modules
 
 on:
-  release:
-    types: [published]
-
   workflow_dispatch:
 
 jobs:
@@ -15,8 +12,8 @@ jobs:
       - name: Tar modules
         run: |
           git clone https://github.com/wjz304/arpl-modules.git
-          ls -d *-*/ | grep -v -e "arpl-modules/"
-          for D in `ls -d *-*/ | grep -v -e "arpl-modules/"`; do
+          ls -d broadwellnk-4.4.302/
+          for D in `ls -d broadwellnk-4.4.302`; do
             E=$(echo ${D} | sed 's#/##')
             if [ ${E} == "epyc7002-5.10.55" ]; then
               mkdir -p /tmp/${E}
@@ -34,16 +31,15 @@ jobs:
               [ -f ./vanilla/${E} ] && cp -vf ./vanilla/${E}/*.ko ./${E}/
             fi
             (cd ${E} && tar caf ../${E}.tgz *.ko)
-            sha256sum ./${E}.tgz | awk '{print $1}' | awk '{print $1 " '${E}.tgz' modpack.sha256"}' >> files-chksum
+            sha256sum ./${E}.tgz | awk '{print $1}' | awk '{print $1 " '${E}.tgz' files.sha256"}' >> files-chksum
           done
           (cd firmware && tar caf ../firmware.tgz *)
-          sha256sum ./firmware.tgz | awk '{print $1}' | awk '{print $1 " 'firmware.tgz' firmware.sha256"}' >> files-chksum
+          sha256sum ./firmware.tgz | awk '{print $1}' | awk '{print $1 " 'firmware.tgz' files.sha256"}' >> files-chksum
           cat files-chksum
-
-      # Publish a release if is a tag
-      - name: Release
-        uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags/')
+          
+      - name: Upload
+        uses: actions/upload-artifact@v2
         with:
           files: |
             *.tgz, files-chksum
+ 
