--- a/.github/workflows/wjz304.yml
+++ b/.github/workflows/wjz304.yml
@@ -285,7 +285,7 @@ jobs:
           mkdir -p firmware
 
           echo "copy 3rd modules"
-          PARTY3RD_PATH="${{ github.workspace }}/firmware"
+          PARTY3RD_PATH="${{ github.workspace }}/thirdparty/firmware"
           cp -rf ${PARTY3RD_PATH}/* firmware/
 
           echo "extract all modules"
