--- a/.github/workflows/wjz304.yml
+++ b/.github/workflows/wjz304.yml
@@ -7,7 +7,7 @@
 
 # # 注意：所有 include 组合会在 exclude 之后处理。 这允许你使用 include 添加回以前排除的组合。
 # version: [ 6.2, 7.1, 7.2 ]
-# platform: [ apollolake, broadwell, broadwellnk, bromolow, denverton, epyc7002, geminilake, purley, r1000, v1000 ]
+# platform: [ apollolake, broadwell, broadwellnk, bromolow, denverton, epyc7002, geminilake, r1000, v1000 ]
 # exclude:
 #   - version: 7.1
 #     platform: broadwell
@@ -35,8 +35,8 @@ jobs:
         include:
           - version: 7.1 
             platform: apollolake
-          - version: 7.1
-            platform: braswell
+          #- version: 7.1
+          #  platform: braswell
           - version: 7.1
             platform: broadwell
           - version: 7.1 
@@ -49,8 +49,8 @@ jobs:
           #  platform: epyc7002
           - version: 7.1 
             platform: geminilake
-          - version: 7.1 
-            platform: purley
+          #- version: 7.1 
+          #  platform: purley
           - version: 7.1
             platform: r1000
           - version: 7.1
@@ -58,8 +58,8 @@ jobs:
 
           - version: 7.2 
             platform: apollolake
-          - version: 7.2
-            platform: braswell
+          #- version: 7.2
+          #  platform: braswell
           - version: 7.2
             platform: broadwell
           - version: 7.2 
@@ -72,8 +72,8 @@ jobs:
             platform: epyc7002
           - version: 7.2 
             platform: geminilake
-          - version: 7.2 
-            platform: purley
+          #- version: 7.2 
+          #  platform: purley
           - version: 7.2
             platform: r1000
           - version: 7.2
