--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,3 +47,13 @@ jobs:
         with:
           files: |
             *.tgz, files-chksum
+
+      - name: Trigger Workflow in Another Repository
+        uses: peter-evans/repository-dispatch@v1
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          repository: PeterSuh-Q3/tcrp-modules
+          workflow: update-sha256.yml
+          ref: main
+          #inputs: |
+            #param1: value1
