--- a/.github/workflows/wjz304.yml
+++ b/.github/workflows/wjz304.yml
@@ -21,12 +21,12 @@ on:
   release:
     types: [published]
 
-  workflow_dispatch:
-    inputs:
-      version:
-        description: 'format %y.%-m.$i or auto'
-        required: false
-        type: string
+  #workflow_dispatch:
+    #inputs:
+      #version:
+        #description: 'format %y.%-m.$i or auto'
+        #required: false
+        #type: string
 
 jobs:
   build:
