--- a/.github/workflows/wjz304.yml
+++ b/.github/workflows/wjz304.yml
@@ -17,9 +17,9 @@
 
 name: Build modules from wjz304
 
-on:  
-  release:
-    types: [published]
+#on:  
+  #release:
+    #types: [published]
 
   #workflow_dispatch:
     #inputs:
