--- a/src/4.x/drivers/Makefile
+++ b/src/4.x/drivers/Makefile
@@ -72,7 +72,7 @@ obj-y				+= gpu/
 #obj-$(CONFIG_IDE)		+= ide/
 obj-$(CONFIG_SCSI)		+= scsi/
 #obj-y				+= nvme/
-obj-$(CONFIG_ATA)		+= ata/
+#obj-$(CONFIG_ATA)		+= ata/
 #obj-$(CONFIG_TARGET_CORE)	+= target/
 #obj-$(CONFIG_MTD)		+= mtd/
 #obj-$(CONFIG_SPI)		+= spi/
