--- a/src/4.x/drivers/net/usb/Makefile
+++ b/src/4.x/drivers/net/usb/Makefile
@@ -10,7 +10,7 @@
 #obj-$(CONFIG_USB_LAN78XX)	+= lan78xx.o
 #obj-$(CONFIG_USB_NET_AX8817X)	+= asix.o
 #asix-y := asix_devices.o asix_common.o ax88172a.o
-#obj-$(CONFIG_USB_NET_AX88179_178A)      += ax88179_178a.o
+obj-$(CONFIG_USB_NET_AX88179_178A)      += ax88179_178a.o
 #obj-$(CONFIG_USB_NET_CDCETHER)	+= cdc_ether.o
 #obj-$(CONFIG_USB_NET_CDC_EEM)	+= cdc_eem.o
 #obj-$(CONFIG_USB_NET_DM9601)	+= dm9601.o
@@ -25,7 +25,7 @@
 #obj-$(CONFIG_USB_NET_CDC_SUBSET_ENABLE)	+= cdc_subset.o
 #obj-$(CONFIG_USB_NET_ZAURUS)	+= zaurus.o
 #obj-$(CONFIG_USB_NET_MCS7830)	+= mcs7830.o
-#obj-$(CONFIG_USB_USBNET)	+= usbnet.o
+obj-$(CONFIG_USB_USBNET)	+= usbnet.o
 #obj-$(CONFIG_USB_NET_INT51X1)	+= int51x1.o
 #obj-$(CONFIG_USB_CDC_PHONET)	+= cdc-phonet.o
 #obj-$(CONFIG_USB_NET_KALMIA)	+= kalmia.o
@@ -40,6 +40,8 @@ obj-$(CONFIG_USB_NET_CDC_NCM)	+= cdc_ncm.o
 #obj-$(CONFIG_USB_NET_CH9200)	+= ch9200.o
 
 obj-$(CONFIG_USB_RTL8152)	+= r8152.o
+obj-$(CONFIG_USB_RTL8153_ECM)   += r8153_ecm.o
+
 CONFIG_CTAP_SHORT = ON
 #       EXTRA_CFLAGS += -DRTL8152_S5_WOL
 #       EXTRA_CFLAGS += -DRTL8152_DEBUG
