--- a/src/4.x/drivers/scsi/Makefile
+++ b/src/4.x/drivers/scsi/Makefile
@@ -175,7 +175,7 @@ scsi_mod-$(CONFIG_SCSI_DH)	+= scsi_dh.o
 
 #hv_storvsc-y			:= storvsc_drv.o
 
-#sd_mod-objs	:= sd.o
+sd_mod-objs	:= sd.o
 #sd_mod-$(CONFIG_BLK_DEV_INTEGRITY) += sd_dif.o
 
 sr_mod-objs	:= sr.o sr_ioctl.o sr_vendor.o
