--- a/src/4.x/drivers/scsi/Makefile
+++ b/src/4.x/drivers/scsi/Makefile
@@ -150,7 +150,7 @@ obj-$(CONFIG_VMWARE_PVSCSI)	+= vmw_pvscsi.o
 
 #obj-$(CONFIG_CHR_DEV_ST)	+= st.o
 #obj-$(CONFIG_CHR_DEV_OSST)	+= osst.o
-#obj-$(CONFIG_BLK_DEV_SD)	+= sd_mod.o
+obj-$(CONFIG_BLK_DEV_SD)	+= sd_mod.o
 obj-$(CONFIG_BLK_DEV_SR)	+= sr_mod.o
 #obj-$(CONFIG_CHR_DEV_SG)	+= sg.o
 #obj-$(CONFIG_CHR_DEV_SCH)	+= ch.o
@@ -176,7 +176,7 @@ scsi_mod-$(CONFIG_SCSI_DH)	+= scsi_dh.o
 #hv_storvsc-y			:= storvsc_drv.o
 
 sd_mod-objs	:= sd.o
-#sd_mod-$(CONFIG_BLK_DEV_INTEGRITY) += sd_dif.o
+sd_mod-$(CONFIG_BLK_DEV_INTEGRITY) += sd_dif.o
 
 sr_mod-objs	:= sr.o sr_ioctl.o sr_vendor.o
 #ncr53c8xx-flags-$(CONFIG_SCSI_ZALON) \
