mod b44,tg3,realtek,virtio,ax88172a,phy,button (4.4.x)

--- a/src/4.x/drivers/acpi/Makefile
+++ b/src/4.x/drivers/acpi/Makefile
@@ -2,6 +2,14 @@
 # Makefile for the Linux ACPI interpreter
 #
 
+# for button
+ifeq ($(CONFIG_V1000), y)
+	 EXTRA_CFLAGS+=-DMY_DEF_HERE
+endif
+ifeq ($(CONFIG_R1000), y)
+	 EXTRA_CFLAGS+=-DMY_DEF_HERE
+endif
+
 ccflags-$(CONFIG_ACPI_DEBUG)	+= -DACPI_DEBUG_OUTPUT
 
 #
