--- a/src/4.x/drivers/net/phy/Makefile
+++ b/src/4.x/drivers/net/phy/Makefile
@@ -1,5 +1,13 @@
 # Makefile for Linux PHY drivers
 
+# for phy, realtek
+ifeq ($(CONFIG_V1000), y)
+	 EXTRA_CFLAGS+=-DMY_DEF_HERE
+endif
+ifeq ($(CONFIG_R1000), y)
+	 EXTRA_CFLAGS+=-DMY_DEF_HERE
+endif
+
 libphy-objs			:= phy.o phy_device.o mdio_bus.o
 
 obj-$(CONFIG_PHYLIB)		+= libphy.o
@@ -19,7 +27,7 @@ obj-$(CONFIG_PHYLIB)		+= libphy.o
 #obj-$(CONFIG_BCM87XX_PHY)	+= bcm87xx.o
 #obj-$(CONFIG_BCM_CYGNUS_PHY)	+= bcm-cygnus.o
 #obj-$(CONFIG_ICPLUS_PHY)	+= icplus.o
-#obj-$(CONFIG_REALTEK_PHY)	+= realtek.o
+obj-$(CONFIG_REALTEK_PHY)	+= realtek.o
 #obj-$(CONFIG_LSI_ET1011C_PHY)	+= et1011c.o
 #obj-$(CONFIG_FIXED_PHY)		+= fixed_phy.o
 #obj-$(CONFIG_MDIO_BITBANG)	+= mdio-bitbang.o
