--- a/src/4.x/drivers/net/ethernet/Makefile
+++ b/src/4.x/drivers/net/ethernet/Makefile
@@ -65,7 +65,7 @@ obj-m += nvidia/
 #obj-$(CONFIG_NET_PACKET_ENGINE) += packetengines/
 #obj-$(CONFIG_NET_VENDOR_PASEMI) += pasemi/
 obj-$(CONFIG_NET_VENDOR_QLOGIC) += qlogic/
-#obj-$(CONFIG_NET_VENDOR_QUALCOMM) += qualcomm/
+obj-$(CONFIG_NET_VENDOR_QUALCOMM) += qualcomm/
 obj-$(CONFIG_NET_VENDOR_REALTEK) += realtek/
 #obj-$(CONFIG_NET_VENDOR_RENESAS) += renesas/
 #obj-$(CONFIG_NET_VENDOR_RDC) += rdc/
