--- a/src/4.x/drivers/acpi/Makefile
+++ b/src/4.x/drivers/acpi/Makefile
@@ -70,7 +70,7 @@ ccflags-$(CONFIG_ACPI_DEBUG)	+= -DACPI_DEBUG_OUTPUT
 #obj-$(CONFIG_ACPI_AC) 		+= ac.o
 obj-$(CONFIG_ACPI_BUTTON)	+= button.o
 #obj-$(CONFIG_ACPI_FAN)		+= fan.o
-#obj-$(CONFIG_ACPI_VIDEO)	+= video.o
+obj-$(CONFIG_ACPI_VIDEO)	+= video.o
 #obj-$(CONFIG_ACPI_PCI_SLOT)	+= pci_slot.o
 obj-$(CONFIG_ACPI_PROCESSOR)	+= processor.o
 #obj-y				+= container.o
