--- a/src/4.x/drivers/video/Makefile
+++ b/src/4.x/drivers/video/Makefile
@@ -3,7 +3,7 @@ obj-$(CONFIG_VGASTATE)            += vgastate.o
 
 obj-$(CONFIG_VT)		  += console/
 #obj-$(CONFIG_LOGO)		  += logo/
-#obj-y				  += backlight/
+obj-y				  += backlight/
 
 obj-y				  += fbdev/
 
