--- a/src/4.x/drivers/acpi/Makefile
+++ b/src/4.x/drivers/acpi/Makefile
@@ -104,4 +104,4 @@ processor-$(CONFIG_CPU_FREQ)	+= processor_perflib.o
 #obj-$(CONFIG_CRC_PMIC_OPREGION) += pmic/intel_pmic_crc.o
 #obj-$(CONFIG_XPOWER_PMIC_OPREGION) += pmic/intel_pmic_xpower.o
 
-#video-objs			+= acpi_video.o video_detect.o
+video-objs			+= acpi_video.o video_detect.o
