--- a/src/4.x/drivers/gpu/drm/Makefile
+++ b/src/4.x/drivers/gpu/drm/Makefile
@@ -27,7 +27,7 @@ drm_kms_helper-y := drm_crtc_helper.o drm_dp_helper.o drm_probe_helper.o \
 		drm_plane_helper.o drm_dp_mst_topology.o drm_atomic_helper.o
 #drm_kms_helper-y += drm_edid_load.o
 drm_kms_helper-y += drm_fb_helper.o
-drm_kms_helper-y += drm_fb_cma_helper.o
+#drm_kms_helper-y += drm_fb_cma_helper.o
 
 obj-$(CONFIG_DRM_KMS_HELPER) += drm_kms_helper.o
 
