--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,11 +22,11 @@ jobs:
             E=$(echo ${D} | sed 's#/##')
             #if [ ${E} == "epyc7002-7.1-5.10.55" ]||[ ${E} == "epyc7002-7.2-5.10.55" ]; then
               echo "clean ${E} directory"
-              mv -vf mpt3sas.ko mpt3sas.ko.bak
+              mv -vf ./${E}/mpt3sas.ko ./${E}/mpt3sas.ko.bak
               rm -f ./${E}/*.ko
               echo "extract ${E} wjz304's module pack"
               tar -xaf /tmp/${E}.tgz -C ./${E}/
-              mv -vf mpt3sas.ko.bak mpt3sas.ko
+              mv -vf ./${E}/mpt3sas.ko.bak ./${E}/mpt3sas.ko
             #fi
             echo "copy ${E} vanilla module"
             [ -d ./vanilla/${E} ] && cp -vf ./vanilla/${E}/*.ko ./${E}/
