--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,12 +23,16 @@ jobs:
             #if [ ${E} == "epyc7002-7.1-5.10.55" ]||[ ${E} == "epyc7002-7.2-5.10.55" ]; then
               echo "clean ${E} directory"
               mv -vf ./${E}/mpt3sas.ko ./${E}/mpt3sas.ko.bak
-              mv -vf ./${E}/tn40xx.ko ./${E}/tn40xx.ko.bak
+              if [ -f ./${E}/tn40xx.ko ]; then
+                mv -vf ./${E}/tn40xx.ko ./${E}/tn40xx.ko.bak
+              fi  
               rm -f ./${E}/*.ko
               echo "extract ${E} wjz304's module pack"
               tar -xaf /tmp/${E}.tgz -C ./${E}/
               mv -vf ./${E}/mpt3sas.ko.bak ./${E}/mpt3sas.ko
-              mv -vf ./${E}/tn40xx.ko.bak ./${E}/tn40xx.ko
+              if [ -f ./${E}/tn40xx.ko.bak ]; then
+                mv -vf ./${E}/tn40xx.ko.bak ./${E}/tn40xx.ko
+              fi  
             #fi
             echo "copy ${E} vanilla module"
             [ -d ./vanilla/${E} ] && cp -vf ./vanilla/${E}/*.ko ./${E}/
