--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,12 +26,18 @@ jobs:
               if [ -f ./${E}/tn40xx.ko ]; then
                 mv -vf ./${E}/tn40xx.ko ./${E}/tn40xx.ko.bak
               fi  
+              if [ -f ./${E}/ata_piix.ko ]; then
+                mv -vf ./${E}/ata_piix.ko ./${E}/ata_piix.ko.bak
+              fi  
               rm -f ./${E}/*.ko
               echo "extract ${E} wjz304's module pack"
               tar -xaf /tmp/${E}.tgz -C ./${E}/
               mv -vf ./${E}/mpt3sas.ko.bak ./${E}/mpt3sas.ko
               if [ -f ./${E}/tn40xx.ko.bak ]; then
                 mv -vf ./${E}/tn40xx.ko.bak ./${E}/tn40xx.ko
+              fi  
+              if [ -f ./${E}/ata_piix.ko.bak ]; then
+                mv -vf ./${E}/ata_piix.ko.bak ./${E}/ata_piix.ko
               fi  
             #fi
             echo "copy ${E} vanilla module"
