--- a/src/4.x/drivers/scsi/Makefile
+++ b/src/4.x/drivers/scsi/Makefile
@@ -27,11 +27,11 @@ obj-$(CONFIG_RAID_ATTRS)	+= raid_class.o
 # For kernel non-modular link, transport attributes need to
 # be initialised before drivers
 # --------------------------
-obj-m	+= scsi_transport_spi/
+obj-y	+= scsi_transport_spi/
 #obj-m	+= scsi_transport_fc/
 #obj-$(CONFIG_SCSI_ISCSI_ATTRS)	+= scsi_transport_iscsi.o
-obj-m	+= scsi_transport_sas/
-obj-$(CONFIG_SCSI_SAS_LIBSAS)	+= libsas/
+obj-y	+= scsi_transport_sas/
+obj-y	+= libsas/
 #obj-$(CONFIG_SCSI_SRP_ATTRS)	+= scsi_transport_srp.o
 #obj-$(CONFIG_SCSI_DH)		+= device_handler/
 
@@ -62,15 +62,15 @@ obj-$(CONFIG_SCSI_SAS_LIBSAS)	+= libsas/
 #obj-$(CONFIG_SCSI_BUSLOGIC)	+= BusLogic.o
 #obj-$(CONFIG_SCSI_DPT_I2O)	+= dpt_i2o.o
 #obj-$(CONFIG_SCSI_U14_34F)	+= u14-34f.o
-obj-m	+= arcmsr/
+obj-y	+= arcmsr/
 #obj-$(CONFIG_SCSI_ULTRASTOR)	+= ultrastor.o
 #obj-$(CONFIG_SCSI_AHA152X)	+= aha152x.o
 #obj-$(CONFIG_SCSI_AHA1542)	+= aha1542.o
 #obj-$(CONFIG_SCSI_AHA1740)	+= aha1740.o
 #obj-$(CONFIG_SCSI_AIC7XXX)	+= aic7xxx/
 #obj-$(CONFIG_SCSI_AIC79XX)	+= aic7xxx/
-obj-m	+= aacraid/
-obj-m	+= aic94xx/
+obj-y	+= aacraid/
+obj-y	+= aic94xx/
 #obj-$(CONFIG_SCSI_PM8001)	+= pm8001/
 #obj-$(CONFIG_SCSI_ISCI)		+= isci/
 #obj-$(CONFIG_SCSI_IPS)		+= ips.o
@@ -104,9 +104,9 @@ obj-m	+= hpsa.o
 #obj-$(CONFIG_SCSI_AM53C974)	+= esp_scsi.o	am53c974.o
 #obj-$(CONFIG_CXLFLASH)		+= cxlflash/
 #obj-$(CONFIG_MEGARAID_LEGACY)	+= megaraid.o
-obj-$(CONFIG_MEGARAID_NEWGEN)	+= megaraid/
-obj-$(CONFIG_MEGARAID_SAS)	+= megaraid/
-obj-$(CONFIG_SCSI_MPT3SAS)	+= mpt3sas/
+#obj-$(CONFIG_MEGARAID_NEWGEN)	+= megaraid/
+obj-y	+= megaraid/
+obj-y	+= mpt3sas/
 #obj-$(CONFIG_SCSI_UFSHCD)	+= ufs/
 #obj-$(CONFIG_SCSI_ACARD)	+= atp870u.o
 #obj-$(CONFIG_SCSI_SUNESP)	+= esp_scsi.o	sun_esp.o
@@ -131,7 +131,7 @@ obj-m	+= 3w-sas.o
 #obj-$(CONFIG_SCSI_IBMVFC)	+= ibmvscsi/
 #obj-$(CONFIG_SCSI_HPTIOP)	+= hptiop.o
 #obj-$(CONFIG_SCSI_STEX)		+= stex.o
-obj-m	+= mvsas/
+obj-y	+= mvsas/
 #obj-$(CONFIG_SCSI_MVUMI)	+= mvumi.o
 #obj-$(CONFIG_PS3_ROM)		+= ps3rom.o
 #obj-$(CONFIG_SCSI_CXGB3_ISCSI)	+= libiscsi.o libiscsi_tcp.o cxgbi/
